# composition

./: .coveragerc  .travis.yml  COPYING  README.rst  composition.py  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: ci.yml  coverage.yml  packaging.yml
