[metadata]
name = composition
version = 8675309
url = https://github.com/Julian/composition
project_urls =
    Source = https://github.com/Julian/composition
    Issues = https://github.com/Julian/composition/issues/
description = What You Crave
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Julian Berman
author_email = Julian+ButDontSendMeEmailsAboutThisOne@GrayVines.com
classifiers =
    Development Status :: 6 - Mature
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = composition
install_requires =
    forbiddenfruit!=0.1.3

[bdist_wheel]
universal = 1
